--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ivan Bustos - Front-End Developer</title>
+    <title>Ivan Bustos - Full Stack Developer</title>
     <meta name="description" content="Portfolio de Ivan Bustos, desarrollador front-end especializado en React, JavaScript y diseño web moderno." />
     <meta name="keywords" content="ivan bustos, frontend developer, react, javascript, web development, portfolio" />
     <meta name="author" content="Ivan Bustos" />
